# si475

competition/comp_ws/src/competition/: package.xml  setup.py
competition/comp_ws/src/competition/competition/: competition.py
lab01/: .clubinfo  lab01.py  makefile  show.py  submit_adjust_image.py  submit_apply_filter.py  submit_rotate_image.py
lab02/: .clubinfo  lab02.py
lab03/: .clubinfo  data.sh  display_cameras.py  lab03.py
lab04/: lab04_1.py  lab04_2.py
lab05/ros2_ws/src/controller/controller/: pid.py
lab06/: localization.py  localization_launch.py  starter.tar
lab06/lab06_ws/src/localization/: package.xml  setup.py
lab06/lab06_ws/src/localization/config/: localization.rviz
lab06/lab06_ws/src/localization/launch/: localization_launch.py
lab06/lab06_ws/src/localization/localization/: likelihood.py  localization.py
lab06/lab06_ws/src/localization/map/: lab.pgm  lab.yaml
lab07/lab07_ws/src/navigation/: package.xml  setup.py
lab07/lab07_ws/src/navigation/config/: localization.yaml
lab07/lab07_ws/src/navigation/launch/: navigation_launch.py
lab07/lab07_ws/src/navigation/map/: classroom_map_1.pgm  classroom_map_1.yaml
lab07/lab07_ws/src/navigation/navigation/: .navigation.py.swp  navigation.py
